--- a/about.html
+++ b/about.html
@@ -108,13 +108,13 @@
                     <div class="col-md-6">
                         <div class="chooes-content">
                             <h4>Customer Satisfaction</h4>
-                            <p>Our clients' satisfaction is our top priority, and we go above and beyond to ensure they are happy with our work</p>
+                            <p>Our clients' satisfaction is our top priority, and we go above and beyond to ensure they are happy with our work.</p>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="chooes-content">
                             <h4>Teamwork</h4>
-                            <p>We believe that the best results are achieved through collaboration. Our team is our greatest asset, and we work together to solve complex problems and deliver exceptional results</p>
+                            <p>We believe that the best results are achieved through collaboration. Our team is our greatest asset, and we work together to solve complex problems and deliver exceptional results.</p>
                         </div>
                     </div>
                 </div>
@@ -130,25 +130,25 @@
                     <div class="col-md-6">
                         <div class="chooes-content">
                             <h4>Customer-Centricity</h4>
-                            <p>Our clients are at the heart of everything we do. We listen, understand, and go the extra mile to meet their needs and exceed their expectations</p>
+                            <p>Our clients are at the heart of everything we do. We listen, understand, and go the extra mile to meet their needs and exceed their expectations.</p>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="chooes-content">
                             <h4>Quality and Reliability</h4>
-                            <p>We are committed to delivering products and services of the highest quality. We adhere to the highest standards and take pride in our work</p>
+                            <p>We are committed to delivering products and services of the highest quality. We adhere to the highest standards and take pride in our work.</p>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="chooes-content">
                             <h4>Innovation and Continuous Improvement</h4>
-                            <p>We embrace creativity and continuous improvement. We strive to push the boundaries of technology to deliver cutting-edge solutions</p>
+                            <p>We embrace creativity and continuous improvement. We strive to push the boundaries of technology to deliver cutting-edge solutions.</p>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="chooes-content">
                             <h4>Collaboration and Teamwork</h4>
-                            <p>We believe that the best results are achieved  through collaboration. Our team is our greatest asset, and we work together to solve complex problems and deliver exceptional results</p>
+                            <p>We believe that the best results are achieved  through collaboration. Our team is our greatest asset, and we work together to solve complex problems and deliver exceptional results.</p>
                         </div>
                     </div>
                 </div>
