--- a/home.html
+++ b/home.html
@@ -103,7 +103,7 @@
                                     </defs>
                                     </svg>
                                      
-                                <p>Device Drivers Development</p>
+                                <p>Device Driver Development</p>
                             </div>
                         </a>
                     </div>
