--- a/service.html
+++ b/service.html
@@ -125,7 +125,7 @@
                                 </div>
                                 <div class="service-box-flip text-white">
                                     <h4>Seamless Integration </h4>
-                                    <p>Achieving seamless integration for effortless connectivity across your systems and platforms</p>
+                                    <p>Achieving seamless integration for effortless connectivity across your systems and platforms.</p>
                                 </div>
                             </div>
                         </div>
