--- a/product.html
+++ b/product.html
@@ -122,7 +122,7 @@
                                 <li><span>Global impact:</span> Distributed to numerous Dell vendors worldwide.</li>
                                 <li><span>Large-scale distribution:</span> Expected to reach around 30 million units annually.</li>
                                 <li><span>Focus on data protection:</span> A crucial upgrade to safeguard user data and improve device efficiency.</li>  
-                                <li><span>Innovation-driven:</span> Provided seamless plug-and-play functionality, enabling the pairing of multiple compatible devices with a single dongle</li>  
+                                <li><span>Innovation-driven:</span> Provided seamless plug-and-play functionality, enabling the pairing of multiple compatible devices with a single dongle.</li>  
                             </ul>
                         </div>
                     </div>
