--- a/home.html
+++ b/home.html
@@ -270,8 +270,8 @@
                             <div class="service" id="Development1">
                                 <img src="image/service-1.png" class="w-100">
                                 <div class="slide-up">
-                                    <h4 class="text-white">Device Drivers Development</h4>
-                                    <p>Expert in device drivers for seamless hardware-software interaction, enhancing performance and stability</p>
+                                    <h4 class="text-white">Device Driver Development</h4>
+                                    <p>Expert in device driver for seamless hardware-software interaction, enhancing performance and stability</p>
                                 </div>
                             </div>
                         </a>
