--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
             <div class="container">
                 <div class="common-title pb-3">
                     <h4>ABOUT US</h4>
-                    <h3>At indiLogic llc, our commitment is to Provide superior products and services to our clients</h3>
+                    <h3>At indiLogic llc, our commitment is to provide superior products and services to our clients</h3>
                 </div>
 
                 <div class="row mt-md-5 mt-3 align-items-center">
