--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Indilogic</title>
+    <title>About Indilogic | Your Trusted Development Partner</title>
+    <meta name="description" content="Learn more about Indilogic and our mission to provide top-quality innovative solutions for any software development. Connect now!">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/inner-page.css">
@@ -50,7 +51,7 @@
             <div class="container">
                 <div class="common-title pb-3">
                     <h4>ABOUT US</h4>
-                    <h3>At IndiLogic llc, our commitment is to provide superior products and services to our clients</h3>
+                    <h3>At IndiLogic, our commitment is to provide superior products and services to our clients.</h3>
                 </div>
 
                 <div class="row mt-md-5 mt-3 align-items-center">
@@ -114,7 +115,7 @@
                     <div class="col-md-6">
                         <div class="chooes-content">
                             <h4>Teamwork</h4>
-                            <p>We believe that the best results are achieved through collaboration. Our team is our greatest asset, and we work together to solve complex problems and deliver exceptional results.</p>
+                            <p>At our core, we belive that collaboration drives the best outcomes. Our team is our most valuable asset, working in unison to tackle complex challenges and consistently deliver outstanding results.</p>
                         </div>
                     </div>
                 </div>
@@ -191,7 +192,7 @@
         <section class="achievement">
             <div class="container text-center">
                 <h2>OUR ACHIEVEMENT</h2>
-                <p>At IndiLogic LLC, we bring over 15 years of expertise in delivering top-quality products that consistently exceed industry expectations. As a trusted strategic partner with Dell Technologies, we have successfully launched innovative products now used by over 16 million users worldwide. This collaboration highlights our relentless pursuit of excellence and our proven ability to scale impactful solutions that meet the ever-evolving needs of the global market.</p>
+                <p>At IndiLogic, we bring over 15 years of expertise in delivering top-quality products. that consistently exceed industry expectations. As a trusted strategic partner with Dell Technologies, we have successfully launched innovative products now used by over 16 million users worldwide. This collaboration highlights our relentless pursuit of excellence and our proven ability to scale impactful solutions that meet the ever-evolving needs of the global market.</p>
             </div>
         </section>
 
@@ -282,7 +283,7 @@
                                 <div class="f-address">
                                     <h5 class="f-title">Locations</h5>
                                     <p><b>USA:</b> IndiLogic LLC, Creek Bend Office Condominiums, 930 South Bell Blvd, Suite 302 Cedar Park, TX 78613, USA</p>
-                                    <p><b>INDIA:</b> IndiLogic Pvt. Ltd. , 8th Floor, Supertech Astralis , Business No. 3, Office No. 816  & 848 , Sector 94, Noida, Gautam Buddha Nagar, Uttar Pradesh, Pin: 201301, India</p>
+                                    <p><b>INDIA:</b> IndiLogic Pvt. Ltd. , 8th Floor, Supertech Astralis , Business No. 3, Office No. 816, Sector 94, Noida, Gautam Buddha Nagar, Uttar Pradesh, Pin: 201301, India</p>
                                 </div>
                                 <div class="social-icon d-md-none d-block">
                                     <a href="#"><img src="image/Facebook.png"></a>
