--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Indilogic</title>
+    <title>Contact Us | Reach Out to Indilogic</title>
+    <meta name="description" content="Have questions? Contact Indilogic for inquiries about our services and support.">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/inner-page.css">
@@ -59,7 +60,7 @@
                         <div class="map text-white">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.633456706573!2d77.32102762604356!3d28.550735137789484!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce59002d23e03%3A0x57c2be62e51fcc2e!2sIndilogic!5e0!3m2!1sen!2sin!4v1727773414702!5m2!1sen!2sin" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                             <h5 class="pt-3">Development Center (India)</h5>
-                            <p>IndiLogic Pvt. Ltd. , 8th Floor, Supertech Astril, Business No. 3, Office No. 816, Sector.94, Noida, Gautam Buddha Nagar, Uttar Pradesh, Pin: 201301, India</p>
+                            <p>IndiLogic Pvt. Ltd. , 8th Floor, Supertech Astralis, Business No. 3, Office No. 816, Sector.94, Noida, Gautam Buddha Nagar, Uttar Pradesh, Pin: 201301, India</p>
                         </div>
                     </div>
                 </div>
@@ -167,7 +168,7 @@
                                 <div class="f-address">
                                     <h5 class="f-title">Locations</h5>
                                     <p><b>USA:</b> IndiLogic LLC, Creek Bend Office Condominiums, 930 South Bell Blvd, Suite 302 Cedar Park, TX 78613, USA</p>
-                                    <p><b>INDIA:</b> IndiLogic Pvt. Ltd. , 8th Floor, Supertech Astralis , Business No. 3, Office No. 816  & 848 , Sector 94, Noida, Gautam Buddha Nagar, Uttar Pradesh, Pin: 201301, India</p>
+                                    <p><b>INDIA:</b> IndiLogic Pvt. Ltd. , 8th Floor, Supertech Astralis , Business No. 3, Office No. 816, Sector 94, Noida, Gautam Buddha Nagar, Uttar Pradesh, Pin: 201301, India</p>
                                 </div>
                                 <div class="social-icon d-md-none d-block">
                                     <a href="#"><img src="image/Facebook.png"></a>
