--- a/home.html
+++ b/home.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Indilogic</title>
+    <title>Custom Software Development Company | Indilogic</title>
+    <meta name="description" content="The leading custom software development company in the USA & India, with 15+ yrs of expertise, offers custom software development services. Learn more.">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/inner-page.css">
@@ -45,8 +46,8 @@
                 </div>
             </div>
             <div class="banner-img pt-4">
-                <img src="image/banner.png" class="w-100 d-md-block d-none">
-                <img src="image/banner-m.png" class="w-100 d-md-none d-block">
+                <img src="image/banner.png" class="w-100 d-md-block d-none" alt="Image showcasing Indilogic team">
+                <img src="image/banner-m.png" class="w-100 d-md-none d-block" alt="Image showcasing Indilogic team">
             </div> 
            <div class="position-absolute translate-middle  start-50">
             <a href="mailto:connect@IndiLogic.com" class="commom-btn bg mt-md-0 mt-3"><svg class="me-3 mb-1" width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -116,7 +117,7 @@
                                     <path d="M80.2732 55.7028H61.4932C60.7324 55.6911 59.9771 55.834 59.2732 56.1227C58.5661 56.4092 57.9235 56.8341 57.3832 57.3725C56.8479 57.9154 56.4234 58.5572 56.1332 59.2622C55.8459 59.9632 55.6998 60.7141 55.7032 61.4718V80.2183C55.6974 81.3641 56.0341 82.4855 56.6702 83.4386C57.3063 84.3917 58.2127 85.133 59.2732 85.5674C59.9771 85.8562 60.7324 85.999 61.4932 85.9873H80.2732C81.035 85.9863 81.7889 85.8338 82.4911 85.5385C83.1933 85.2433 83.8297 84.8113 84.3632 84.2676C84.8935 83.7247 85.3115 83.0826 85.5932 82.378C85.8732 81.6684 86.0125 80.9111 86.0032 80.1484V61.4118C85.9953 59.8966 85.3884 58.4461 84.315 57.3766C83.2415 56.3071 81.7886 55.7054 80.2732 55.7028ZM82.8832 80.1484C82.8704 80.8364 82.5913 81.4928 82.1046 81.9794C81.6178 82.466 80.9614 82.7451 80.2732 82.7579H61.4932C60.805 82.7451 60.1486 82.466 59.6618 81.9794C59.1751 81.4928 58.896 80.8364 58.8832 80.1484V61.4118C58.9033 60.7283 59.1821 60.078 59.6632 59.5921C60.1475 59.1026 60.8046 58.8226 61.4932 58.8122H80.2732C80.9618 58.8226 81.6188 59.1026 82.1032 59.5921C82.5843 60.078 82.8631 60.7283 82.8832 61.4118V80.1484Z" fill="#606060"/>
                                     <path d="M57.1203 36.6966H69.2603V48.8744C69.3087 49.2633 69.4965 49.6215 69.7888 49.8826C70.0812 50.1437 70.4583 50.2899 70.8503 50.2941C71.2447 50.2906 71.6245 50.1451 71.9203 49.8842C72.2107 49.6262 72.3958 49.2703 72.4403 48.8844V36.6966H84.5803C84.9662 36.6521 85.3222 36.467 85.5803 36.1767C85.8438 35.8846 85.9897 35.5053 85.9897 35.1119C85.9897 34.7186 85.8438 34.3392 85.5803 34.0471C85.3222 33.7568 84.9662 33.5717 84.5803 33.5272H72.5003V21.4094C72.4564 21.0185 72.27 20.6575 71.9767 20.3954C71.6834 20.1332 71.3037 19.9883 70.9103 19.9883C70.5169 19.9883 70.1373 20.1332 69.844 20.3954C69.5506 20.6575 69.3642 21.0185 69.3203 21.4094V33.5272H57.1203C56.7344 33.5717 56.3784 33.7568 56.1203 34.0471C55.8568 34.3392 55.7109 34.7186 55.7109 35.1119C55.7109 35.5053 55.8568 35.8846 56.1203 36.1767C56.3784 36.467 56.7344 36.6521 57.1203 36.6966Z" fill="#606060"/>
                                     </svg>                                     
-                                <p>Cross-Platform Desktop Application Development</p>
+                                <p>Cross-Platform Application Development</p>
                             </div>
                         </a>
                     </div>
@@ -210,12 +211,12 @@
                         <div class="middle-boder"></div>
                     </div>
                     <div class="col-8 d-md-none dell-text text-white">
-                        <h1 class="">Proud Strategic Partners of Dell Technologies</h1>
+                        <h1 class="">Proud Strategic Partners of Dell Technologies.</h1>
                     </div>
                     
                     <div class="col-md-9 col-12">
                         <div class="dell-text text-white">
-                            <h1 class="d-none d-md-block">Proud Strategic Partners of Dell Technologies</h1>
+                            <h1 class="d-none d-md-block">Proud Strategic Partners of Dell Technologies.</h1>
                             <p class="pt-md-0 pt-3">At IndiLogic, we’re honored to be a strategic partner of Dell, a global leader in technology innovation. This collaboration empowers us to deliver cutting-edge solutions that drive digital transformation and success for our clients. Together, we’re shaping the future of technology.</p>
                         </div>
                     </div>
@@ -248,7 +249,7 @@
                             <img src="image/img-3.png" class="hover-image">
                         </div>
                         <h4>Dell Secure Link Receiver</h4>
-                        <p>Developed in partnership with Dell, Dell Secure Link Receiver RF Dongle firmware with enhanced security and speed</p>
+                        <p>Developed in partnership with Dell, Dell Secure Link Receiver RF Dongle firmware with enhanced security and speed.</p>
                     </div>
                 </div>
                 <a href="product.html" class="text-decoration-none explore"><svg class="me-3" width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -271,7 +272,7 @@
                                 <img src="image/service-1.png" class="w-100">
                                 <div class="slide-up">
                                     <h4 class="text-white">Device Driver Development</h4>
-                                    <p>Expert in device driver for seamless hardware-software interaction, enhancing performance and stability</p>
+                                    <p>Expert in device driver for seamless hardware-software interaction, enhancing performance and stability.</p>
                                 </div>
                             </div>
                         </a>
@@ -281,7 +282,7 @@
                             <div class="service" id="Development2">
                                 <img src="image/service-2.png" class="w-100">
                                 <div class="slide-up">
-                                    <h4 class="text-white">Cross-Platform Desktop Application Development</h4>
+                                    <h4 class="text-white">Cross-Platform Application Development</h4>
                                     <p>We offer cross-platform app development, creating powerful, user-friendly apps with seamless integration.
                                         </p>
                                 </div>
@@ -295,7 +296,7 @@
                                 <img src="image/service-3.png" class="w-100">
                                 <div class="slide-up">
                                     <h4 class="text-white">Firmware/IoT Development</h4>
-                                    <p>Specializing in firmware & IoT, we create efficient low-level software for reliable embedded systems</p>
+                                    <p>Specializing in firmware & IoT, we create efficient low-level software for reliable embedded systems.</p>
                                 </div>
                             </div>
                         </a>
@@ -306,7 +307,7 @@
                                 <img src="image/service-4.png" class="w-100">
                                 <div class="slide-up">
                                     <h4 class="text-white">Mobile Application Development</h4>
-                                    <p> We offer end-to-end mobile app development for iOS and Android, focusing on performance and user experience</p>
+                                    <p> We offer end-to-end mobile app development for iOS and Android, focusing on performance and user experience.</p>
                                 </div>
                             </div>
                         </a>
@@ -495,7 +496,7 @@
                                 <div class="f-address">
                                     <h5 class="f-title">Locations</h5>
                                     <p><b>USA:</b> IndiLogic LLC, Creek Bend Office Condominiums, 930 South Bell Blvd, Suite 302 Cedar Park, TX 78613, USA</p>
-                                    <p><b>INDIA:</b> IndiLogic Pvt. Ltd. , 8th Floor, Supertech Astralis , Business No. 3, Office No. 816  & 848 , Sector 94, Noida, Gautam Buddha Nagar, Uttar Pradesh, Pin: 201301, India</p>
+                                    <p><b>INDIA:</b> IndiLogic Pvt. Ltd. , 8th Floor, Supertech Astralis , Business No. 3, Office No. 816, Sector 94, Noida, Gautam Buddha Nagar, Uttar Pradesh, Pin: 201301, India</p>
                                 </div>
                                 <div class="social-icon d-md-none d-block">
                                     <a href="#"><img src="image/Facebook.png"></a>
