--- a/product.html
+++ b/product.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Indilogic</title>
+    <title>Dell Peripherals | Indilogic Products</title>
+    <meta name="description" content="Discover high-quality Dell peripherals designed to enhance your computing experience at Indilogic. Learn more.">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/inner-page.css">
@@ -52,8 +53,8 @@
         <section class="dell-partner">
            <div class="container text-white">
                 <h3>Partnership WITH DELL</h3>
-                <h4>Transforming Ideas into Products with Dell Technologies</h4>
-                <p>At IndiLogic LLC, we take pride in delivering top quality products and services that exceed industry standards. Our collabrations with Dell Technologies as trusted strategic partner has resulted in products that are used by over 16+ million users worldwide</p>
+                <h4>Transforming Ideas into Products with Dell Technologies.</h4>
+                <p>At IndiLogic, we take pride in delivering top quality products and services that exceed industry standards. Our collabrations with Dell Technologies as trusted strategic partner has resulted in products that are used by over 16+ million users worldwide.</p>
            </div>
         </section>
 
@@ -231,7 +232,7 @@
                                 <div class="f-address">
                                     <h5 class="f-title">Locations</h5>
                                     <p><b>USA:</b> IndiLogic LLC, Creek Bend Office Condominiums, 930 South Bell Blvd, Suite 302 Cedar Park, TX 78613, USA</p>
-                                    <p><b>INDIA:</b> IndiLogic Pvt. Ltd. , 8th Floor, Supertech Astralis , Business No. 3, Office No. 816  & 848 , Sector 94, Noida, Gautam Buddha Nagar, Uttar Pradesh, Pin: 201301, India</p>
+                                    <p><b>INDIA:</b> IndiLogic Pvt. Ltd. , 8th Floor, Supertech Astralis , Business No. 3, Office No. 816, Sector 94, Noida, Gautam Buddha Nagar, Uttar Pradesh, Pin: 201301, India</p>
                                 </div>
                                 <div class="social-icon d-md-none d-block">
                                     <a href="#"><img src="image/Facebook.png"></a>
