--- a/service.html
+++ b/service.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Indilogic</title>
+    <title>Top-Notch Software Development Services | Indilogic</title>
+    <meta name="description" content="Are you looking for the best? As a leading software firm, we deliver top-notch software development services. Contact us expert solutions!">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/inner-page.css">
@@ -61,7 +62,7 @@
                                     </div>
                                 </div>
                                 <div class="service-box-flip text-white">
-                                    <h4>One time Delivery </h4>
+                                    <h4>On time Delivery </h4>
                                     <p>Delivering innovative tech solutions that drive growth and efficiency, one project at a time.</p>
                                 </div>
                             </div>
@@ -83,7 +84,7 @@
                                 </div>
                                 <div class="service-box-flip text-white">
                                     <h4>Customized solutions</h4>
-                                    <p>Our team had the privilege of collaborating closely with the Miami-based Alienware team to develop the corearchitecture for the Alienware Command .</p>
+                                    <p>Tailoring cutting-edge solution to meet your unique business need and goals.</p>
                                 </div>
                             </div>
                         </div>
@@ -137,7 +138,7 @@
             <div class="container">
                 <div class="common-title text-white">
                     <h4>OUR SERVICES</h4>
-                   <h3 class="text-white mw-100">A Delivering cutting-edge software solutions with precision and reliability – empowering your digital transformation journey</h3>
+                   <h3 class="text-white mw-100">A Delivering cutting-edge software solutions with precision and reliability – empowering your digital transformation journey.</h3>
                 </div>
                 <div class="row pt-4 gy-4">
                     <div class="col-md-4 d-flex" id="service1">
@@ -157,7 +158,7 @@
                                 <span class="close-btn">&times;</span>
                                 <h4>Device Driver Development</h4>
                                 <p>Our expertise in device driver development ensures seamless interaction between hardware and software components. We create reliable, efficient, and optimized driver that enhance device functionality 
-                                    and performance, providing a smooth and stable user experience</p>
+                                    and performance, providing a smooth and stable user experience.</p>
                             
                                 <div class="row gy-4">
                                     <div class="col-md-6 d-flex">
@@ -171,7 +172,7 @@
                                         <div class="inner-content">
                                             <h5>USB Device Driver Development</h5>
                                             <p>We specialize in advanced USB device driver development for a diverse range of platforms, including Windows XP through 10, Linux, Android, iOS, and macOS. Our expert engineers excel in kernel-mode driver development, leveraging in-depth OS knowledge to create and debug custom driver effectively.</p>
-                                            <p> We adhere to stringent coding standards and quality assurance practices, ensuring optimal performance and eliminating bottlenecks. From development to deployment, we deliver innovative and authentic solutions that drive device functionality and reliability</p>
+                                            <p> We adhere to stringent coding standards and quality assurance practices, ensuring optimal performance and eliminating bottlenecks. From development to deployment, we deliver innovative and authentic solutions that drive device functionality and reliability.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -187,36 +188,36 @@
                                     <path d="M1.11353 18.7084C0.623945 19.2513 0.623945 20.1315 1.11353 20.6744C1.60311 21.2173 2.39689 21.2173 2.88647 20.6744L1.11353 18.7084ZM2.88647 20.6744L18.2273 3.66355L16.4544 1.6976L1.11353 18.7084L2.88647 20.6744Z" fill="#1E1E1E"/>
                                 </svg>   
                             </div>
-                            <h4>Cross-Platform Desktop Application Development</h4>
+                            <h4>Cross-Platform Application Development</h4>
                             <p> We specialize in crafting desktop and Windows applications tailored to your exact needs. Our solutions are secure, scalable, and seamlessly integrate with your existing systems to drive business success. </p>
                         </div>
                         <div class="popup-overlay" id="popup-2">
                             <div class="popup-content container">
                                 <span class="close-btn">&times;</span>
-                                <h4>Cross-Platform Desktop Application Development</h4>
+                                <h4>Cross-Platform Application Development</h4>
                                 <p>We specialize in crafting desktop and Windows applications tailored to your exact needs. Our solutions are secure, scalable, and seamlessly integrate with your existing systems to drive business success. Across 
-                                    industries, our applications enhance customer management and service while minimizing risks, allowing you to focus on your core business goals</p>
+                                    industries, our applications enhance customer management and service while minimizing risks, allowing you to focus on your core business goals.</p>
                             
                                 <div class="row gy-4">
                                     <div class="col-md-6 d-flex">
                                         <div class="inner-content">
                                             <h5>Custom Desktop Application Development</h5>
                                             <p>We specialize in custom desktop application development, precisely crafted to meet your unique needs.</p>
-                                            <p>Our experts work closely with you to understand your requirements, delivering bespoke applications designed to enhance efficiency and drive productivity in your business</p>
+                                            <p>Our experts work closely with you to understand your requirements, delivering bespoke applications designed to enhance efficiency and drive productivity in your business.</p>
                                         </div>
                                     </div>
                                     <div class="col-md-6 d-flex">
                                         <div class="inner-content">
                                             <h5>API Development for Desktop Application</h5>
                                             <p>Unlock new potential for your desktop applications with custom APIs. </p>
-                                            <p>We enhance your software by enabling secure data exchange, seamless third-party integrations, and expanded functionality, ensuring your applications are more powerful and versatile</p>
+                                            <p>We enhance your software by enabling secure data exchange, seamless third-party integrations, and expanded functionality, ensuring your applications are more powerful and versatile.</p>
                                         </div>
                                     </div>
                                     <div class="col-md-12 d-flex">
                                         <div class="inner-content">
                                             <h5>UWP Application Development</h5>
                                             <p>We create UWP applications that run flawlessly across all Windows devices.</p>
-                                            <p>Our experts focus on delivering user-friendly, optimized, and highly responsive applications that provide a seamless experience for your users</p>
+                                            <p>Our experts focus on delivering user-friendly, optimized, and highly responsive applications that provide a seamless experience for your users.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -248,21 +249,21 @@
                                         <div class="inner-content">
                                             <h5>Embedded Firmware Development</h5>
                                             <p>We offer comprehensive embedded firmware development services, including both low-level and high-level firmware as well as subsystems to drive your embedded systems. </p>
-                                            <p>Our firmware solutions are designed to integrate seamlessly with hardware and microprocessors from leading companies such as NVIDIA, Qualcomm, Intel, ARM, and others</p>
+                                            <p>Our firmware solutions are designed to integrate seamlessly with hardware and microprocessors from leading companies such as NVIDIA, Qualcomm, Intel, ARM, and others.</p>
                                         </div>
                                     </div>
                                     <div class="col-md-6 d-flex">
                                         <div class="inner-content">
                                             <h5>Legacy Firmware Migration</h5>
                                             <p>As a specialized firmware development company, we facilitate the migration of your firmware from one MCU vendor to another. We handle all aspects of the transition, including re-layout of the PCB design if necessary, to ensure that your firmware is fully portable and optimized for the new hardware. </p>
-                                            <p>Our expertise ensures a smooth transition with minimal disruption,enabling your systems to leverage the latest technology while preserving functionality and performance</p>
+                                            <p>Our expertise ensures a smooth transition with minimal disruption,enabling your systems to leverage the latest technology while preserving functionality and performance.</p>
                                         </div>
                                     </div>
                                     <div class="col-md-12 d-flex">
                                         <div class="inner-content">
                                             <h5>Digital Signal Processing (DSP)</h5>
                                             <p>Our firmware development expertise in Digital Signal Processing (DSP) enables us to deliver cutting-edge solutions for real-time analysis of sensor, audio, and video data. We integrate advanced machine learning algorithms, applied both locally and in the cloud, to enhance functionalities such as object detection in camera feeds, noise reduction in voice recordings, and pattern recognition in equipment monitoring. </p>
-                                            <p>Our bespoke DSP solutions are designed to provide precise, efficient, and adaptable data processing, tailored to meet your unique requirements and optimize performance</p>
+                                            <p>Our bespoke DSP solutions are designed to provide precise, efficient, and adaptable data processing, tailored to meet your unique requirements and optimize performance.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -300,7 +301,7 @@
                                         <div class="inner-content">
                                             <h5>Native Android App Development</h5>
                                             <p>Our expert team delivers top-tier native Android apps, blending industry insight with the latest trends. We provide strategic guidance and create robust, scalable solutions designed for maximum ROI. </p>
-                                            <p>Utilizing cutting-edge technology, we ensure your custom apps perform flawlessly across all Android devices</p>
+                                            <p>Utilizing cutting-edge technology, we ensure your custom apps perform flawlessly across all Android devices.</p>
                                         </div>
                                     </div>
                                     <div class="col-md-12 d-flex">
@@ -366,7 +367,7 @@
                     </div>
                     <div class="logos">
                         <img src="image/tech-11.jpg">
-                        <p>#C</p>
+                        <p>C#</p>
                     </div>
                     <div class="logos">
                         <img src="image/tech-12.jpg">
@@ -495,7 +496,7 @@
                                 <div class="f-address">
                                     <h5 class="f-title">Locations</h5>
                                     <p><b>USA:</b> IndiLogic LLC, Creek Bend Office Condominiums, 930 South Bell Blvd, Suite 302 Cedar Park, TX 78613, USA</p>
-                                    <p><b>INDIA:</b> IndiLogic Pvt. Ltd. , 8th Floor, Supertech Astralis , Business No. 3, Office No. 816  & 848 , Sector 94, Noida, Gautam Buddha Nagar, Uttar Pradesh, Pin: 201301, India</p>
+                                    <p><b>INDIA:</b> IndiLogic Pvt. Ltd. , 8th Floor, Supertech Astralis , Business No. 3, Office No. 816, Sector 94, Noida, Gautam Buddha Nagar, Uttar Pradesh, Pin: 201301, India</p>
                                 </div>
                                 <div class="social-icon d-md-none d-block">
                                     <a href="#"><img src="image/Facebook.png"></a>
