--- a/Trademark.html
+++ b/Trademark.html
@@ -41,7 +41,7 @@
         <section class="trandmark pb-4">
             <div class="container pb-5">
                 <h2 class="pb-4">Trademark Disclaimer</h2>
-                <p>All trademarks, logos, and brand names are the property of their respective owners. All company, product, and service names used on this website are for identification purposes only. Use of these names, trademarks, and brands does not imply endorsement</p>
+                <p>All trademarks, logos, and brand names are the property of their respective owners. All company, product, and service names used on this website are for identification purposes only. Use of these names, trademarks, and brands does not imply Device any endorsement.</p>
             </div>
         </section>
     </main>
@@ -95,7 +95,7 @@
                                 <div class="f-address">
                                     <h5 class="f-title">Locations</h5>
                                     <p><b>USA:</b> IndiLogic LLC, Creek Bend Office Condominiums, 930 South Bell Blvd, Suite 302 Cedar Park, TX 78613, USA</p>
-                                    <p><b>INDIA:</b> IndiLogic Pvt. Ltd. , 8th Floor, Supertech Astralis , Business No. 3, Office No. 816  & 848 , Sector 94, Noida, Gautam Buddha Nagar, Uttar Pradesh, Pin: 201301, India</p>
+                                    <p><b>INDIA:</b> IndiLogic Pvt. Ltd. , 8th Floor, Supertech Astralis , Business No. 3, Office No. 816, Sector 94, Noida, Gautam Buddha Nagar, Uttar Pradesh, Pin: 201301, India</p>
                                 </div>
                                 <div class="social-icon d-md-none d-block">
                                     <a href="#"><img src="image/Facebook.png"></a>
